# so_long

./: .editorconfig  .gitignore  Makefile
bonus_src/: collectables_and_flag_bonus.c  counter_bonus.c  draw_utils_bonus.c  floor_bonus.c  ft_str_arr_bonus.c  has_exit_bonus.c  main_bonus.c  player2_bonus.c  player_bonus.c  read_map_bonus.c  validate_map_bonus.c
include/: so_long.h  so_long_bonus.h
libs/libft/: Makefile
libs/libft/get_next_line/: get_next_line.c  get_next_line_utils.c
libs/libft/include/: ft_printf.h  get_next_line.h  libft.h
libs/libft/printf/: ft_printf.c  pf_check_err.c  pf_putchar.c  pf_puthex.c  pf_putnbr.c  pf_putptr.c  pf_putstr.c  pf_putunbr.c
libs/libft/src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_char_any_of.c  ft_free.c  ft_hashmap.c  ft_hm_node.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  (+7 more)
maps/: enemy_patrol.ber  many_entries.ber  many_exits.ber  missing_exit.ber  no_exit_enemy_patrol.ber
src/: draw_char.c  draw_collectables.c  draw_collectables_and_flag.c  draw_floor.c  draw_utils.c  floor.c  ft_str_arr.c  has_exit.c  main.c  player.c  player2.c  read_map.c  validate_map.c
src/textures/: elements.xcf
test/: CMakeLists.txt  CMakeLists.txt.in  e2e.cpp  has_exit.cpp  read_map.cpp  str_arr.cpp
textures/: elements.xcf
